--- a/index.html
+++ b/index.html
@@ -100,6 +100,10 @@
         #hack_nottingham {
             display: none;
         }
+        
+        #novaterra_boc {
+            display: none;
+        }
     </style>
 
     <script>
@@ -122,6 +126,7 @@
             document.getElementById("hack_exeter").style.display = "none";
             document.getElementById("hack_nottingham").style.display = "none";
             document.getElementById("hack_the_crisis").style.display = "none";
+            document.getElementById("novaterra_box").style.display = "none";
         }
 
         function clickInternshipsButton() {
@@ -143,6 +148,7 @@
             document.getElementById("hack_exeter").style.display = "none";
             document.getElementById("hack_nottingham").style.display = "none";
             document.getElementById("hack_the_crisis").style.display = "none";
+            document.getElementById("novaterra_box").style.display = "none";
         }
 
         function clickHackathonsButton() {
@@ -164,6 +170,7 @@
             document.getElementById("hack_exeter").style.display = "inline";
             document.getElementById("hack_nottingham").style.display = "inline";
             document.getElementById("hack_the_crisis").style.display = "inline";
+            document.getElementById("novaterra_box").style.display = "none";
         }
 
         function clickProjectsButton() {
@@ -185,6 +192,7 @@
             document.getElementById("hack_exeter").style.display = "none";
             document.getElementById("hack_nottingham").style.display = "none";
             document.getElementById("hack_the_crisis").style.display = "none";
+            document.getElementById("novaterra_box").style.display = "inline";
         }
     </script>
 
@@ -533,7 +541,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                         </div>
 
                         <div id="hack_nottingham" class="col-md-6 animate-box" data-animate-effect="fadeInBottom">
-                            <div class="project" style="background-image: url(images/img-4.jpg); border-radius:10px;">
+                            <div class="project" style="background-image: url(images/nottingham.jpg); border-radius:10px;">
                                 <div class="desc">
                                     <div class="con">
                                         <h3><a href="https://devpost.com/software/carbonhood">HACK NOTTINGHAM</a></h3>
@@ -575,7 +583,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                             </div>
 
                             <div id="hack_the_crisis" class="col-md-6 animate-box" data-animate-effect="fadeInLeft" style="border-radius:10px;">
-                                <div class="project" style="background-image: url(images/img-1.jpg); border-radius:10px;">
+                                <div class="project" style="background-image: url(images/hackthecrisis.jpg); border-radius:10px;">
                                     <div class="desc">
                                         <div class="con">
                                             <h3><a href="https://app.netzero.world/checkout.html" style="text-transform:none">HACK THE CRISIS</a></h3>
