--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                         </div>
 
                         <div id="hack_exeter" class="col-md-6 animate-box" data-animate-effect="fadeInRight" style="border-radius:10px;">
-                            <div class="project" style="background-image: url(images/img-2.jpg); border-radius:10px;">
+                            <div class="project" style="background-image: url(images/hackexeter.jpg); border-radius:10px;">
                                 <div class="desc">
                                     <div class="con">
                                         <h3><a href="https://www.carbonly.org">Hack Exeter</a></h3>
