changing project images

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             display: none;
         }
         
-        #novaterra_boc {
+        #novaterra_box {
             display: none;
         }
     </style>
