--- a/index.html
+++ b/index.html
@@ -300,8 +300,14 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                                         <div class="about-desc">
                                             <span class="heading-meta">About Me</span>
                                             <h2 class="colorlib-heading">Who Am I?</h2>
-                                            <p><strong>Hi I'm Oliver Carmont</strong>. I'm Spanish and Australian, but have lived the majority of my life in Amsterdam, The Netherlands. With a pioneering mindset and eager to fight for a change, I've worked
-                                                with several social startups in the attempt to create a better world. Wanna' collaborate? Let me know!</p>
+                                            <p><strong>Hi I'm Oliver Carmont</strong>. I'm Spanish and Australian, but have lived the majority of my life in Amsterdam. I'm a life-long environmentalist and full-stack developer, always on the lookout for ways
+                                                to use Tech to drive change.
+
+
+
+                                                <!-- With a pioneering mindset and eager to fight for a change, I've worked
+                                                with several social startups in the attempt to create a better world. Wanna' collaborate? Let me know!-->
+                                            </p>
                                         </div>
                                     </div>
                                 </div>
@@ -452,7 +458,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                         </div>
 
                         <div id="connect_box" class="col-md-6 animate-box" data-animate-effect="fadeInRight" style="border-radius:10px;">
-                            <div class="project" style="background-image: url(images/connect.png); border-radius:10px;">
+                            <div class="project" style="background-image: url(images/connect.jpg); border-radius:10px;">
                                 <div class="desc">
                                     <div class="con">
                                         <h3><a href="https://www.carbonly.org">CONNECT EARTH</a></h3>
