--- a/index.html
+++ b/index.html
@@ -81,10 +81,6 @@
             display: none;
         }
         
-        #netzero_world {
-            display: none;
-        }
-        
         #connect_box {
             display: none;
         }
@@ -120,8 +116,8 @@
 
             document.getElementById("netzero_box").style.display = "none";
             document.getElementById("carbonly_box").style.display = "inline";
-            document.getElementById("netzero_world").style.display = "none";
-            document.getElementById("open_database").style.display = "none";
+            document.getElementById("netzero_world").style.display = "inline";
+            document.getElementById("open_database").style.display = "inline";
             document.getElementById("connect_box").style.display = "none";
             document.getElementById("hack_exeter").style.display = "none";
             document.getElementById("hack_nottingham").style.display = "none";
@@ -186,8 +182,8 @@
 
             document.getElementById("netzero_box").style.display = "none";
             document.getElementById("carbonly_box").style.display = "none";
-            document.getElementById("netzero_world").style.display = "inline";
-            document.getElementById("open_database").style.display = "inline";
+            document.getElementById("netzero_world").style.display = "none";
+            document.getElementById("open_database").style.display = "none";
             document.getElementById("connect_box").style.display = "none";
             document.getElementById("hack_exeter").style.display = "none";
             document.getElementById("hack_nottingham").style.display = "none";
@@ -613,7 +609,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                                     <div class="desc">
                                         <div class="con">
                                             <h3><a href="http://www.opendatabase.io/landing">Open Database</a></h3>
-                                            <span>CEO And Lead Contributor</span>
+                                            <span>Creator</span>
                                             <div style="margin-top:45px; color:#fcfcfc; margin-bottom:45px;">
                                                 Founded in August 2020 <br/>Over 450 Rows of Data Added
                                             </div>
