--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <meta property='og:url' content='https://www.olivercarmont.com' />
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <link rel="shortcut icon" href="images/favicon.png">
+    <link rel="shortcut icon" href="images/favicon.ico">
 
-    <link rel="icon" type="image/x-icon" href="images/favicon.png">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
@@ -584,26 +584,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                                 <!--</a>-->
                             </div>
 
-                            <div id="hack_the_crisis" class="col-md-6 animate-box" data-animate-effect="fadeInLeft" style="border-radius:10px;">
-                                <div class="project" style="background-image: url(images/hackthecrisis.jpg); border-radius:10px;">
-                                    <div class="desc">
-                                        <div class="con">
-                                            <h3><a href="https://app.netzero.world/checkout.html" style="text-transform:none">HACK THE CRISIS</a></h3>
-                                            <span>Participant</span>
-                                            <div style="margin-top:45px; color:#fcfcfc; margin-bottom:45px;">
-                                                Developed a web-app for tracking people with covid symptoms in the community.
-                                            </div>
-
-                                            <a href="https://app.netzero.world/checkout.html" style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; font-weight:700;">View on Figma >>><i class="fas fa-arrow-circle-right"></i></a>
-                                            <!--<p class="icon">
-												<span><a href="https://www.netzerocheckout.com"><i class="icon-share3"></i></a></span>
-											</p>-->
-                                        </div>
-                                    </div>
-                                </div>
-                                <!--</a>-->
-                            </div>
-
                             <div id="open_database" class="col-md-6 animate-box" data-animate-effect="fadeInTop">
                                 <div class="project" style="background-image: url(images/img-3.jpg);border-radius:10px;">
                                     <div class="desc">
@@ -626,6 +606,28 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                                     </div>
                                 </div>
                             </div>
+
+                            <div id="hack_the_crisis" class="col-md-6 animate-box" data-animate-effect="fadeInLeft" style="border-radius:10px;">
+                                <div class="project" style="background-image: url(images/hackthecrisis.jpg); border-radius:10px;">
+                                    <div class="desc">
+                                        <div class="con">
+                                            <h3><a href="https://app.netzero.world/checkout.html" style="text-transform:none">HACK THE CRISIS</a></h3>
+                                            <span>Participant</span>
+                                            <div style="margin-top:45px; color:#fcfcfc; margin-bottom:45px;">
+                                                Developed a web-app for tracking people with covid symptoms in the community.
+                                            </div>
+
+                                            <a href="https://app.netzero.world/checkout.html" style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; font-weight:700;">View on Figma >>><i class="fas fa-arrow-circle-right"></i></a>
+                                            <!--<p class="icon">
+												<span><a href="https://www.netzerocheckout.com"><i class="icon-share3"></i></a></span>
+											</p>-->
+                                        </div>
+                                    </div>
+                                </div>
+                                <!--</a>-->
+                            </div>
+
+
 
 
                         </div>
