--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                                 <!--</a>-->
                             </div>
 
-                            <div id="open_database" class="col-md-6 animate-box" data-animate-effect="fadeInTop">
+                            <div id="open_database" class="col-md-6 animate-box" data-animate-effect="fadeInTop" style="border-radius:10px;">
                                 <div class="project" style="background-image: url(images/img-3.jpg);border-radius:10px;">
                                     <div class="desc">
                                         <div class="con">
