--- a/index.html
+++ b/index.html
@@ -453,6 +453,29 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                             </div>
                         </div>
 
+                        <div id="open_database" class="col-md-6 animate-box" data-animate-effect="fadeInRight" style="border-radius:10px;">
+                            <div class="project" style="background-image: url(images/img-2.jpg); border-radius:10px;">
+                                <div class="desc">
+                                    <div class="con">
+                                        <h3><a href="https://www.carbonly.org">Carbon2ly</a></h3>
+                                        <span>Founder and CEO</span>
+                                        <div style="margin-top:45px; color:#fcfcfc; margin-bottom:25px;">
+                                            Entered The Pioneer.app Startup Accelerator <br/> Raised $12k in Funding From Fortum, Pioneer and Junction
+                                        </div>
+
+                                        <a href="https://www.carbonly.org" style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; font-weight:700;">Check it Out! >>><i class="fas fa-arrow-circle-right"></i></a>
+
+                                        <!--	<p class="icon">
+										<span><a href="https://www.carbonly.org"><i class="icon-share3"></i></a></span>
+
+									</p>-->
+                                        <!--	<span><a href="#"><i class="icon-eye"></i> 100</a></span>
+										<span><a href="#"><i class="icon-heart"></i> 49</a></span> -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                         <div id="connect_box" class="col-md-6 animate-box" data-animate-effect="fadeInRight" style="border-radius:10px;">
                             <div class="project" style="background-image: url(images/connect.jpg); border-radius:10px;">
                                 <div class="desc">
@@ -463,7 +486,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                                             Worked in a team of four to automate Connect Earth's data gathering.
                                         </div>
 
-                                        <a href="https://www.carbonly.org" style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; font-weight:700;">Check it Out! >>><i class="fas fa-arrow-circle-right"></i></a>
+                                        <a href="https://www.connect.earth" style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; font-weight:700;">Check it Out! >>><i class="fas fa-arrow-circle-right"></i></a>
 
                                         <!--	<p class="icon">
 										<span><a href="https://www.carbonly.org"><i class="icon-share3"></i></a></span>
@@ -584,28 +607,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                                 <!--</a>-->
                             </div>
 
-                            <div id="open_database" class="col-md-6 animate-box" data-animate-effect="fadeInRight" style="border-radius:10px;">
-                                <div class="project" style="background-image: url(images/img-2.jpg); border-radius:10px;">
-                                    <div class="desc">
-                                        <div class="con">
-                                            <h3><a href="https://www.carbonly.org">Carbonly</a></h3>
-                                            <span>Founder and CEO</span>
-                                            <div style="margin-top:45px; color:#fcfcfc; margin-bottom:25px;">
-                                                Entered The Pioneer.app Startup Accelerator <br/> Raised $12k in Funding From Fortum, Pioneer and Junction
-                                            </div>
 
-                                            <a href="https://www.carbonly.org" style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; font-weight:700;">Check it Out! >>><i class="fas fa-arrow-circle-right"></i></a>
-
-                                            <!--	<p class="icon">
-											<span><a href="https://www.carbonly.org"><i class="icon-share3"></i></a></span>
-	
-										</p>-->
-                                            <!--	<span><a href="#"><i class="icon-eye"></i> 100</a></span>
-											<span><a href="#"><i class="icon-heart"></i> 49</a></span> -->
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
 
 
                             <!--<div id="open_database" class="col-md-6 animate-box" data-animate-effect="fadeInTop" style="border-radius:10px;">
