--- a/index.html
+++ b/index.html
@@ -453,29 +453,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                             </div>
                         </div>
 
-                        <div id="open_database" class="col-md-6 animate-box" data-animate-effect="fadeInRight" style="border-radius:10px;">
-                            <div class="project" style="background-image: url(images/img-2.jpg); border-radius:10px;">
-                                <div class="desc">
-                                    <div class="con">
-                                        <h3><a href="https://www.carbonly.org">Carbon2ly</a></h3>
-                                        <span>Founder and CEO</span>
-                                        <div style="margin-top:45px; color:#fcfcfc; margin-bottom:25px;">
-                                            Entered The Pioneer.app Startup Accelerator <br/> Raised $12k in Funding From Fortum, Pioneer and Junction
-                                        </div>
-
-                                        <a href="https://www.carbonly.org" style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; font-weight:700;">Check it Out! >>><i class="fas fa-arrow-circle-right"></i></a>
-
-                                        <!--	<p class="icon">
-										<span><a href="https://www.carbonly.org"><i class="icon-share3"></i></a></span>
-
-									</p>-->
-                                        <!--	<span><a href="#"><i class="icon-eye"></i> 100</a></span>
-										<span><a href="#"><i class="icon-heart"></i> 49</a></span> -->
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
                         <div id="connect_box" class="col-md-6 animate-box" data-animate-effect="fadeInRight" style="border-radius:10px;">
                             <div class="project" style="background-image: url(images/connect.jpg); border-radius:10px;">
                                 <div class="desc">
@@ -610,7 +587,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 
 
 
-                            <!--<div id="open_database" class="col-md-6 animate-box" data-animate-effect="fadeInTop" style="border-radius:10px;">
+                            <div id="open_database" class="col-md-6 animate-box" data-animate-effect="fadeInTop" style="border-radius:10px; width:90%;">
                                 <div class="project" style="background-image: url(images/img-3.jpg);border-radius:10px;">
                                     <div class="desc">
                                         <div class="con">
@@ -626,12 +603,12 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 												<span><a href="https://www.opendatabase.io"><i class="icon-share3"></i></a></span>
 
 											</p>-->
-                            <!--	<span><a href="#"><i class="icon-eye"></i> 100</a></span>
+                                            <!--	<span><a href="#"><i class="icon-eye"></i> 100</a></span>
 												<span><a href="#"><i class="icon-heart"></i> 49</a></span> -->
-                            <!---- </div>
-                    </div>
-            </div>
-        </div>-->
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
 
                             <div id="hack_the_crisis" class="col-md-6 animate-box" data-animate-effect="fadeInLeft" style="border-radius:10px;">
                                 <div class="project" style="background-image: url(images/hackthecrisis.jpg); border-radius:10px;">
