--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                                             <span class="heading-meta">About Me</span>
                                             <h2 class="colorlib-heading">Who Am I?</h2>
                                             <p><strong>Hi I'm Oliver Carmont</strong>. I'm Spanish and Australian, but have lived the majority of my life in Amsterdam. I'm a life-long environmentalist and full-stack developer, always on the lookout for ways
-                                                to use Tech to drive change.
+                                                to use technology to drive environmental impacts.
 
 
 
