--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 
 
 
-                            <div id="open_database" class="col-md-6 animate-box" data-animate-effect="fadeInTop" style="border-radius:10px; width:90%;">
+                            <div id="open_database" class="col-md-6 animate-box" data-animate-effect="fadeInTop" style="margin-left:15px;">
                                 <div class="project" style="background-image: url(images/img-3.jpg);border-radius:10px;">
                                     <div class="desc">
                                         <div class="con">
