--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 
 
                             <div id="open_database" class="col-md-6 animate-box" data-animate-effect="fadeInTop" style="margin-left:15px;">
-                                <div class="project" style="background-image: url(images/img-3.jpg);border-radius:10px;">
+                                <div class="project" style="background-image: url(images/img-3.jpg);border-radius:10px; width:90%;">
                                     <div class="desc">
                                         <div class="con">
                                             <h3><a href="http://www.opendatabase.io/landing">Open Database</a></h3>
