--- a/index.html
+++ b/index.html
@@ -296,8 +296,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                                         <div class="about-desc">
                                             <span class="heading-meta">About Me</span>
                                             <h2 class="colorlib-heading">Who Am I?</h2>
-                                            <p><strong>Hi I'm Oliver Carmont</strong>. I'm Spanish and Australian, but have lived the majority of my life in Amsterdam. I'm a life-long environmentalist and full-stack developer, always on the lookout for ways
-                                                to use technology to drive environmental impacts.
+                                            <p><strong>Hi I'm Oliver Carmont</strong>. I'm Spanish and Australian, but have lived the majority of my life in Amsterdam. I'm a life-long environmentalist and full-stack developer, always looking for ways to
+                                                use technology to drive environmental impact.
 
 
 
