--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                         <div class="row">
                             <!---- <a href="https://app.netzero.world/checkout.html">-->
                             <div id="netzero_world" class="col-md-6 animate-box" data-animate-effect="fadeInLeft" style="border-radius:10px;">
-                                <div class="project" style="background-image: url(images/img-1.jpg); border-radius:10px;">
+                                <div class="project" style="background-image: url(images/img-1.jpg); border-radius:10px; width:97%;">
                                     <div class="desc">
                                         <div class="con">
                                             <h3><a href="https://app.netzero.world/checkout.html" style="text-transform:none">NETZERO CHECKOUT</a></h3>
@@ -587,7 +587,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 
 
 
-                            <div id="open_database" class="col-md-6 animate-box" data-animate-effect="fadeInTop" style="margin-left:15px;">
+                            <div id="open_database" class="col-md-6 animate-box" data-animate-effect="fadeInTop" style="margin-left:14px;">
                                 <div class="project" style="background-image: url(images/img-3.jpg);border-radius:10px; width:97%;">
                                     <div class="desc">
                                         <div class="con">
@@ -610,8 +610,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                                 </div>
                             </div>
 
-                            <div id="hack_the_crisis" class="col-md-6 animate-box" data-animate-effect="fadeInLeft" style="border-radius:10px;">
-                                <div class="project" style="background-image: url(images/hackthecrisis.jpg); border-radius:10px;">
+                            <div id="hack_the_crisis" class="col-md-6 animate-box" data-animate-effect="fadeInLeft" style="border-radius:10px; margin-left:14px;">
+                                <div class="project" style="background-image: url(images/hackthecrisis.jpg); border-radius:10px; width:97%;">
                                     <div class="desc">
                                         <div class="con">
                                             <h3><a href="https://app.netzero.world/checkout.html" style="text-transform:none">HACK THE CRISIS</a></h3>
