--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                                 <h2 class="colorlib-heading animate-box">My Projects</h2>
                             </div>
                         </div>
-                        <div style="margin-top:-60px; display:block; height:0px;"></div>
+                        <div style="margin-top:-60px; display:block; height:0px; float:none;"></div>
 
                         <div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
                             <div class="col-md-12">
@@ -430,7 +430,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                             </div>
                         </div>
 
-                        <div id="carbonly_box" class="col-md-6 animate-box" data-animate-effect="fadeInRight" style="border-radius:10px;">
+                        <div id="carbonly_box" class="col-md-6 animate-box" data-animate-effect="fadeInRight" style="border-radius:10px; float:none;">
                             <div class="project" style="background-image: url(images/img-2.jpg); border-radius:10px;">
                                 <div class="desc">
                                     <div class="con">
@@ -552,7 +552,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                                             Earned First Capital One Award <br/>Developed the front-end for our web-app<br/>
                                         </div>
 
-                                        <a href="https://devpost.com/software/carbonhood" style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; font-weight:700;">Check it Out! >>><i class="fas fa-arrow-circle-right"></i></a>
+                                        <a href="https://devpost.com/software/carbonhood" style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; font-weight:700;">View on Figma >>><i class="fas fa-arrow-circle-right"></i></a>
                                         <!--	<p class="icon">
 										<span><a href="https://www.netzero.world"><i class="icon-share3"></i></a></span>
 
