--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                             </div>
                         </div>
 
-                        <div id="carbonly_box" class="col-md-6 animate-box" data-animate-effect="fadeInRight" style="border-radius:10px; float:none;">
+                        <div id="carbonly_box" class="col-md-6 animate-box" data-animate-effect="fadeInRight" style="border-radius:10px;">
                             <div class="project" style="background-image: url(images/img-2.jpg); border-radius:10px;">
                                 <div class="desc">
                                     <div class="con">
