--- a/index.html
+++ b/index.html
@@ -503,13 +503,13 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                             <div class="project" style="background-image: url(images/hackexeter.jpg); border-radius:10px;">
                                 <div class="desc">
                                     <div class="con">
-                                        <h3><a href="https://www.carbonly.org">Hack Exeter</a></h3>
+                                        <h3><a href="https://docs.google.com/presentation/d/1v9rz6kaUrC16dstAiIsQW5DH4pYzXyfVd_GwKmhCSvg/edit#slide=id.g6fda3e5eb2_36_156">Hack Exeter</a></h3>
                                         <span>Winner</span>
                                         <div style="margin-top:45px; color:#fcfcfc; margin-bottom:25px;">
                                             Received First Hackathon Award worth £1000 and full reimbursement to JunctionX Finland. <br/> Raised $12k in Funding From Fortum, Pioneer and Junction
                                         </div>
 
-                                        <a href="https://www.carbonly.org" style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; font-weight:700;">View on Figma >>><i class="fas fa-arrow-circle-right"></i></a>
+                                        <a href="https://docs.google.com/presentation/d/1v9rz6kaUrC16dstAiIsQW5DH4pYzXyfVd_GwKmhCSvg/edit#slide=id.g6fda3e5eb2_36_156" style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; font-weight:700;">View Presentation >>><i class="fas fa-arrow-circle-right"></i></a>
 
                                         <!--	<p class="icon">
 										<span><a href="https://www.carbonly.org"><i class="icon-share3"></i></a></span>
@@ -552,7 +552,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                                             Earned First Capital One Award <br/>Developed the front-end for our web-app<br/>
                                         </div>
 
-                                        <a href="https://devpost.com/software/carbonhood" style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; font-weight:700;">View on Figma >>><i class="fas fa-arrow-circle-right"></i></a>
+                                        <a href="https://devpost.com/software/carbonhood" style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; font-weight:700;">View on Devpost >>><i class="fas fa-arrow-circle-right"></i></a>
                                         <!--	<p class="icon">
 										<span><a href="https://www.netzero.world"><i class="icon-share3"></i></a></span>
 
@@ -614,13 +614,13 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                                 <div class="project" style="background-image: url(images/hackthecrisis.jpg); border-radius:10px; width:97%;">
                                     <div class="desc">
                                         <div class="con">
-                                            <h3><a href="https://app.netzero.world/checkout.html" style="text-transform:none">HACK THE CRISIS</a></h3>
+                                            <h3><a href="https://www.figma.com/file/VtqoqxQXXNeGyXJ7JrvGwp/Hack-The-Crisis?node-id=0%3A1" style="text-transform:none">HACK THE CRISIS</a></h3>
                                             <span>Participant</span>
                                             <div style="margin-top:45px; color:#fcfcfc; margin-bottom:45px;">
                                                 Developed a web-app for tracking people with covid symptoms in the community.
                                             </div>
 
-                                            <a href="https://app.netzero.world/checkout.html" style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; font-weight:700;">View on Figma >>><i class="fas fa-arrow-circle-right"></i></a>
+                                            <a href="https://www.figma.com/file/VtqoqxQXXNeGyXJ7JrvGwp/Hack-The-Crisis?node-id=0%3A1" style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; font-weight:700;">View on Figma >>><i class="fas fa-arrow-circle-right"></i></a>
                                             <!--<p class="icon">
 												<span><a href="https://www.netzerocheckout.com"><i class="icon-share3"></i></a></span>
 											</p>-->
