--- a/index.html
+++ b/index.html
@@ -480,13 +480,13 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                             <div class="project" style="background-image: url(images/novaterra.jpg); border-radius:10px;">
                                 <div class="desc">
                                     <div class="con">
-                                        <h3><a href="https://www.carbonly.org">NOVATERRA</a></h3>
+                                        <h3><a href="https://www.figma.com/file/g1MilSv5RVSK021JtM1ldu/NovaTerra?node-id=0%3A1">NOVATERRA</a></h3>
                                         <span>Founder</span>
                                         <div style="margin-top:45px; color:#fcfcfc; margin-bottom:25px;">
                                             Built a fully-functional, environmental social-media platform at 16.
                                         </div>
 
-                                        <a href="https://www.carbonly.org" style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; font-weight:700;">View on Figma >>><i class="fas fa-arrow-circle-right"></i></a>
+                                        <a href="https://www.figma.com/file/g1MilSv5RVSK021JtM1ldu/NovaTerra?node-id=0%3A1" style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; font-weight:700;">View on Figma >>><i class="fas fa-arrow-circle-right"></i></a>
 
                                         <!--	<p class="icon">
 										<span><a href="https://www.carbonly.org"><i class="icon-share3"></i></a></span>
