--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                                         <h3><a href="https://docs.google.com/presentation/d/1v9rz6kaUrC16dstAiIsQW5DH4pYzXyfVd_GwKmhCSvg/edit#slide=id.g6fda3e5eb2_36_156">Hack Exeter</a></h3>
                                         <span>Winner</span>
                                         <div style="margin-top:45px; color:#fcfcfc; margin-bottom:25px;">
-                                            Received First Hackathon Award worth £1000 and full reimbursement to JunctionX Finland. <br/> Raised $12k in Funding From Fortum, Pioneer and Junction
+                                            Received First Hackathon Award worth £1000 and full reimbursement to JunctionX Finland. <br/>
                                         </div>
 
                                         <a href="https://docs.google.com/presentation/d/1v9rz6kaUrC16dstAiIsQW5DH4pYzXyfVd_GwKmhCSvg/edit#slide=id.g6fda3e5eb2_36_156" style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; font-weight:700;">View Presentation >>><i class="fas fa-arrow-circle-right"></i></a>
@@ -529,7 +529,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                                         <h3><a href="https://netzero.world/">NetZero App</a></h3>
                                         <span>UX/UI Developer</span>
                                         <div style="margin-top:45px; color:#fcfcfc; margin-bottom:45px;">
-                                            Designed Front-end for MVP And Created NetZero's Carbon Database <br/>
+                                            Designed The Front-end for Our MVP And Created NetZero's Carbon Database <br/>
                                         </div>
 
                                         <a href="https://netzero.world/" style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; font-weight:700;">Check it Out! >>><i class="fas fa-arrow-circle-right"></i></a>
@@ -617,7 +617,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                                             <h3><a href="https://www.figma.com/file/VtqoqxQXXNeGyXJ7JrvGwp/Hack-The-Crisis?node-id=0%3A1" style="text-transform:none">HACK THE CRISIS</a></h3>
                                             <span>Participant</span>
                                             <div style="margin-top:45px; color:#fcfcfc; margin-bottom:45px;">
-                                                Developed a web-app for tracking people with covid symptoms in the community.
+                                                Developed a web-app for tracking individuals with covid symptoms in the community.
                                             </div>
 
                                             <a href="https://www.figma.com/file/VtqoqxQXXNeGyXJ7JrvGwp/Hack-The-Crisis?node-id=0%3A1" style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; font-weight:700;">View on Figma >>><i class="fas fa-arrow-circle-right"></i></a>
