--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                                     </div>
                                 </div>
                             </li>
-                            <li style="background-image: url(images/img_bg_2.jpg);">
+                            <li style="background-image: url(images/img_bg_2.png);">
                                 <div class="overlay"></div>
                                 <div class="container-fluid">
                                     <div class="row">
