--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <meta property='og:url' content='https://www.olivercarmont.com' />
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <link rel=”icon” href=”images/favicon.ico” type=”image/x-icon” />
-    <link rel=”shortcut icon” href=”images/favicon.ico” type=”image/x-icon” />
+    <link rel=”icon” href=”/favicon.ico” type=”image/x-icon”>
+    <link rel=”shortcut icon” href=”/favicon.ico” type=”image/x-icon”>
 
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
