--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="author" content="" />
 
     <!-- Facebook and Twitter integration -->
-    <meta property="og:title" content="" />
+    <!-- <meta property="og:title" content="" />
     <meta property="og:image" content="" />
     <meta property="og:url" content="" />
     <meta property="og:site_name" content="" />
@@ -19,7 +19,7 @@
     <meta name="twitter:title" content="" />
     <meta name="twitter:image" content="" />
     <meta name="twitter:url" content="" />
-    <meta name="twitter:card" content="" />
+    <meta name="twitter:card" content="" /> -->
 
     <meta property='og:title' content="Oliver Carmont's Personal Website" />
     <meta property='og:image' content='https://res.cloudinary.com/netzero/image/upload/v1609960042/Screenshot_2020-11-13_at_15.31.05_o5jbcl.png' />
