--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Oliver Carmont</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
-    <meta name="author" content="" />
+    <meta name="description" content="Oliver Carmont 's Personal Website" />
+    <meta name="keywords" content="Oliver Carmont" />
+    <meta name="author" content="Oliver Carmont" />
 
     <!-- Facebook and Twitter integration -->
     <!-- <meta property="og:title" content="" />
@@ -21,10 +21,10 @@
     <meta name="twitter:url" content="" />
     <meta name="twitter:card" content="" /> -->
 
-    <meta property='og:title' content="Oliver Carmont's Personal Website" />
-    <meta property='og:image' content='https://res.cloudinary.com/netzero/image/upload/v1609960042/Screenshot_2020-11-13_at_15.31.05_o5jbcl.png' />
-    <meta property='og:description' content="Oliver Carmont's Personal Website" />
-    <meta property='og:url' content='https://www.olivercarmont.com' />
+    <meta property="og:title" content="Oliver Carmont's Personal Website" />
+    <meta property="og:image" content="https://res.cloudinary.com/netzero/image/upload/v1609960042/Screenshot_2020-11-13_at_15.31.05_o5jbcl.png" />
+    <meta property="og:description" content="Oliver Carmont 's Personal Website" />
+    <meta property="og:url" content="https://www.olivercarmont.com " />
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -63,7 +63,7 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
     <script type="text/javascript">
         (function() {
-            emailjs.init('user_h39VxjpWJD2CkR1zHGpkC')
+            emailjs.init('user_h39VxjpWJD2CkR1zHGpkC ')
         })();
     </script>
 
@@ -232,9 +232,14 @@
                 </nav>
 
                 <div class="colorlib-footer">
-                    <p><small>&copy; <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> Oliver Carmont. All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --> </span> </small></p>
+                    <p><small>&copy; <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --> Copyright &copy;
+    <script>
+        document.write(new Date().getFullYear());
+    </script> Oliver Carmont. All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+    </span>
+    </small>
+                    </p>
                     <ul>
                         <li><a href="#"><i class="icon-facebook2"></i></a></li>
                         <li><a href="#"><i class="icon-twitter2"></i></a></li>
@@ -273,7 +278,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                                         <div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
                                             <div class="slider-text-inner">
                                                 <div class="desc">
-                                                    <h1 style="color:#fff;">I'm <br>an Environmentalist</h1>
+                                                    <h1 style="color:#fff;">I'm <br>an Activist</h1>
                                                     <h2 style="color:#fff;">I've Worked With 3 Social Startups Fighting For a Better Future</h2>
                                                     <p><a href="#work" class="btn btn-primary btn-learn" style="color:#fff; border-color:#fff">View Projects <i class="icon-briefcase3"></i></a></p>
                                                 </div>
