--- a/index.html
+++ b/index.html
@@ -505,6 +505,29 @@
                             </div>
                         </div>
 
+                        <div id="cody_box" class="col-md-6 animate-box" data-animate-effect="fadeInRight" style="border-radius:10px;">
+                            <div class="project" style="background-image: url(images/cody.png); border-radius:10px;">
+                                <div class="desc">
+                                    <div class="con">
+                                        <h3><a href="https://www.figma.com/file/g1MilSv5RVSK021JtM1ldu/NovaTerra?node-id=0%3A1">Codythereum</a></h3>
+                                        <span>Project Developer</span>
+                                        <div style="margin-top:45px; color:#fcfcfc; margin-bottom:25px;">
+                                            Built a blockchain "charity" as my final project for Berkeley Codeology's Ethereum Smart Contracts Project.
+                                        </div>
+
+                                        <a href="https://www.figma.com/file/g1MilSv5RVSK021JtM1ldu/NovaTerra?node-id=0%3A1" style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; font-weight:700;">View on Figma >>><i class="fas fa-arrow-circle-right"></i></a>
+
+                                        <!--	<p class="icon">
+										<span><a href="https://www.carbonly.org"><i class="icon-share3"></i></a></span>
+
+									</p>-->
+                                        <!--	<span><a href="#"><i class="icon-eye"></i> 100</a></span>
+										<span><a href="#"><i class="icon-heart"></i> 49</a></span> -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                         <div id="hack_exeter" class="col-md-6 animate-box" data-animate-effect="fadeInRight" style="border-radius:10px;">
                             <div class="project" style="background-image: url(images/hackexeter.jpg); border-radius:10px;">
                                 <div class="desc">
