--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
         #novaterra_box {
             display: none;
         }
+        
+        #cody_box {
+            display: none;
+        }
     </style>
 
     <script>
@@ -124,6 +128,7 @@
             document.getElementById("hack_nottingham").style.display = "none";
             document.getElementById("hack_the_crisis").style.display = "none";
             document.getElementById("novaterra_box").style.display = "none";
+            document.getElementById("cody_box").style.display = "none";
         }
 
         function clickInternshipsButton() {
@@ -146,6 +151,7 @@
             document.getElementById("hack_nottingham").style.display = "none";
             document.getElementById("hack_the_crisis").style.display = "none";
             document.getElementById("novaterra_box").style.display = "none";
+            document.getElementById("cody_box").style.display = "none";
         }
 
         function clickHackathonsButton() {
@@ -168,6 +174,7 @@
             document.getElementById("hack_nottingham").style.display = "inline";
             document.getElementById("hack_the_crisis").style.display = "inline";
             document.getElementById("novaterra_box").style.display = "none";
+            document.getElementById("cody_box").style.display = "none";
         }
 
         function clickProjectsButton() {
@@ -190,6 +197,7 @@
             document.getElementById("hack_nottingham").style.display = "none";
             document.getElementById("hack_the_crisis").style.display = "none";
             document.getElementById("novaterra_box").style.display = "inline";
+            document.getElementById("cody_box").style.display = "inline";
         }
     </script>
 
