new codyethereum project

--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
                                             Built a blockchain "charity" as my final project for Berkeley Codeology's Ethereum Smart Contracts Project.
                                         </div>
 
-                                        <a href="https://www.figma.com/file/g1MilSv5RVSK021JtM1ldu/NovaTerra?node-id=0%3A1" style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; font-weight:700;">View on Figma >>><i class="fas fa-arrow-circle-right"></i></a>
+                                        <a style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; font-weight:700;">No Longer Available :(<i class="fas fa-arrow-circle-right"></i></a>
 
                                         <!--	<p class="icon">
 										<span><a href="https://www.carbonly.org"><i class="icon-share3"></i></a></span>
