removed work button

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                                                     <h1 style="color:#fff">Hi! <br>I'm Oliver</h1>
                                                     <h2 style="color:#fff">A Full-Stack Developer in Berkeley</h2>
                                                     <!-- <p><a class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p> -->
-                                                    <p><a href="#work" class="btn btn-primary btn-learn" style="color:#fff; border-color:#fff">View Projects <i class="icon-briefcase3"></i></a></p>
+                                                    <!--<p><a href="#work" class="btn btn-primary btn-learn" style="color:#fff; border-color:#fff">View Projects <i class="icon-briefcase3"></i></a></p>-->
                                                 </div>
                                             </div>
                                         </div>
@@ -288,7 +288,7 @@
                                                 <div class="desc">
                                                     <h1 style="color:#fff;">I'm <br>an Activist</h1>
                                                     <h2 style="color:#fff;">I've Worked With 3 Social Startups Fighting For a Better Future</h2>
-                                                    <p><a href="#work" class="btn btn-primary btn-learn" style="color:#fff; border-color:#fff">View Projects <i class="icon-briefcase3"></i></a></p>
+                                                    <!--<p><a href="#work" class="btn btn-primary btn-learn" style="color:#fff; border-color:#fff">View Projects <i class="icon-briefcase3"></i></a></p>-->
                                                 </div>
                                             </div>
                                         </div>
