adding scroll func

--- a/index.html
+++ b/index.html
@@ -276,9 +276,7 @@
                                                     <h1 style="color:#fff">Hi! <br>I'm Oliver</h1>
                                                     <h2 style="color:#fff">A Full-Stack Developer in Berkeley</h2>
                                                     <!-- <p><a class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p> -->
-                                                    
-                                                    <h2 style="color:#fff">Scroll Down -></h2>
-                                                    <p><a onclick="scrollDown();" class="btn btn-primary btn-learn" style="color:#fff; border-color:#fff">Scroll Down! <i class="icon-briefcase3"></i></a></p>
+                                                    <p><a href="#work" class="btn btn-primary btn-learn" style="color:#fff; border-color:#fff">Scroll Down! <i class="icon-briefcase3"></i></a></p>
                                                 </div>
                                             </div>
                                         </div>
@@ -437,20 +435,20 @@
                 <section class="colorlib-work" data-section="work" id="work" style="margin-bottom:-60px;">
                     <div class="colorlib-narrow-content">
                         <div class="row">
-                            <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
+                            <div class="col-md-6 col-md-offset-3 col-md-pull-3" data-animate-effect="fadeInLeft">
                                 <span class="heading-meta">Recent Work</span>
                                 <h2 class="colorlib-heading animate-box">My Projects</h2>
                             </div>
                         </div>
                         <div style="margin-top:-60px; display:block; height:0px; float:none;"></div>
 
-                        <div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
+                        <div class="row row-bottom-padded-sm">
                             <div class="col-md-12">
                                 <p class="work-menu"><span><a id="startups-button" class="active" onclick="clickStartupButton();">Startups</a></span> <span><a id="internships-button" class="non-active" onclick="clickInternshipsButton();">Internships</a></span> <span><a id="hackathons-button" class="non-active" onclick="clickHackathonsButton();">Hackathons</a></span><span><a id="projects-button" class="non-active" onclick="clickProjectsButton();">Projects</a></span></p>
                             </div>
                         </div>
 
-                        <div id="carbonly_box" class="col-md-6 animate-box" data-animate-effect="fadeInRight" style="border-radius:10px;">
+                        <div id="carbonly_box" class="col-md-6" style="border-radius:10px;">
                             <div class="project" style="background-image: url(images/img-2.jpg); border-radius:10px;">
                                 <div class="desc">
                                     <div class="con">
@@ -473,7 +471,7 @@
                             </div>
                         </div>
 
-                        <div id="connect_box" class="col-md-6 animate-box" data-animate-effect="fadeInRight" style="border-radius:10px;">
+                        <div id="connect_box" class="col-md-6 animate-box" style="border-radius:10px;">
                             <div class="project" style="background-image: url(images/connect.jpg); border-radius:10px;">
                                 <div class="desc">
                                     <div class="con">
@@ -496,7 +494,7 @@
                             </div>
                         </div>
 
-                        <div id="novaterra_box" class="col-md-6 animate-box" data-animate-effect="fadeInRight" style="border-radius:10px;">
+                        <div id="novaterra_box" class="col-md-6 animate-box" style="border-radius:10px;">
                             <div class="project" style="background-image: url(images/novaterra.jpg); border-radius:10px;">
                                 <div class="desc">
                                     <div class="con">
@@ -519,7 +517,7 @@
                             </div>
                         </div>
 
-                        <div id="cody_box" class="col-md-6 animate-box" data-animate-effect="fadeInRight" style="border-radius:10px;">
+                        <div id="cody_box" class="col-md-6 animate-box" style="border-radius:10px;">
                             <div class="project" style="background-image: url(images/cody.png); border-radius:10px;">
                                 <div class="desc">
                                     <div class="con">
@@ -565,7 +563,7 @@
                             </div>
                         </div>
 
-                        <div id="netzero_box" class="col-md-6 animate-box" data-animate-effect="fadeInBottom">
+                        <div id="netzero_box" class="col-md-6 animate-box">
                             <div class="project" style="background-image: url(images/img-4.jpg); border-radius:10px;">
                                 <div class="desc">
                                     <div class="con">
@@ -585,7 +583,7 @@
                             </div>
                         </div>
 
-                        <div id="hack_nottingham" class="col-md-6 animate-box" data-animate-effect="fadeInBottom">
+                        <div id="hack_nottingham" class="col-md-6 animate-box">
                             <div class="project" style="background-image: url(images/nottingham.jpg); border-radius:10px;">
                                 <div class="desc">
                                     <div class="con">
