adding scroll func

--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
                             </div>
                         </div>
 
-                        <div id="cody_box" class="col-md-6 animate-box" style="border-radius:10px;">
+                        <div id="cody_box" class="col-md-6" style="border-radius:10px;">
                             <div class="project" style="background-image: url(images/cody.png); border-radius:10px;">
                                 <div class="desc">
                                     <div class="con">
