adding scroll func

--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                             </div>
                         </div>
 
-                        <div id="carbonly_box" class="col-md-6" style="border-radius:10px;">
+                        <div id="carbonly_box" data-animate-effect="fadeInLeft" class="col-md-6" style="border-radius:10px;">
                             <div class="project" style="background-image: url(images/img-2.jpg); border-radius:10px;">
                                 <div class="desc">
                                     <div class="con">
