adding scroll func

--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                             </div>
                         </div>
 
-                        <div id="carbonly_box" data-animate-effect="fadeInLeft" class="col-md-6" style="border-radius:10px;">
+                        <div id="carbonly_box" class="col-md-6" style="border-radius:10px;">
                             <div class="project" style="background-image: url(images/img-2.jpg); border-radius:10px;">
                                 <div class="desc">
                                     <div class="con">
@@ -605,7 +605,7 @@
 
                         <div class="row">
                             <!---- <a href="https://app.netzero.world/checkout.html">-->
-                            <div id="netzero_world" class="col-md-6 animate-box" data-animate-effect="fadeInLeft" style="border-radius:10px;">
+                            <div id="netzero_world" class="col-md-6" style="border-radius:10px;">
                                 <div class="project" style="background-image: url(images/img-1.jpg); border-radius:10px; width:97%;">
                                     <div class="desc">
                                         <div class="con">
@@ -628,7 +628,7 @@
 
 
 
-                            <div id="open_database" class="col-md-6 animate-box" data-animate-effect="fadeInTop" style="margin-left:14px;">
+                            <div id="open_database" class="col-md-6" style="margin-left:14px;">
                                 <div class="project" style="background-image: url(images/img-3.jpg);border-radius:10px; width:97%;">
                                     <div class="desc">
                                         <div class="con">
