adding scroll func

--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
                             </div>
                         </div>
 
-                        <div id="hack_exeter" class="col-md-6 animate-box" data-animate-effect="fadeInRight" style="border-radius:10px;">
+                        <div id="hack_exeter" class="col-md-6" data-animate-effect="fadeInRight" style="border-radius:10px;">
                             <div class="project" style="background-image: url(images/hackexeter.jpg); border-radius:10px;">
                                 <div class="desc">
                                     <div class="con">
@@ -563,7 +563,7 @@
                             </div>
                         </div>
 
-                        <div id="netzero_box" class="col-md-6 animate-box">
+                        <div id="netzero_box" class="col-md-6">
                             <div class="project" style="background-image: url(images/img-4.jpg); border-radius:10px;">
                                 <div class="desc">
                                     <div class="con">
@@ -583,7 +583,7 @@
                             </div>
                         </div>
 
-                        <div id="hack_nottingham" class="col-md-6 animate-box">
+                        <div id="hack_nottingham" class="col-md-6">
                             <div class="project" style="background-image: url(images/nottingham.jpg); border-radius:10px;">
                                 <div class="desc">
                                     <div class="con">
@@ -651,7 +651,7 @@
                                 </div>
                             </div>
 
-                            <div id="hack_the_crisis" class="col-md-6 animate-box" data-animate-effect="fadeInLeft" style="border-radius:10px; margin-left:14px;">
+                            <div id="hack_the_crisis" class="col-md-6" data-animate-effect="fadeInLeft" style="border-radius:10px; margin-left:14px;">
                                 <div class="project" style="background-image: url(images/hackthecrisis.jpg); border-radius:10px; width:97%;">
                                     <div class="desc">
                                         <div class="con">
@@ -676,7 +676,7 @@
 
                         </div>
                         <div class="row">
-                            <div class="col-md-12 animate-box">
+                            <div class="col-md-12">
                                 <!--		<p><a href="#" class="btn btn-primary btn-lg btn-load-more">Load more <i class="icon-reload"></i></a></p>-->
                             </div>
                         </div>
