adding scroll func

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 
                         <a href="https://olivercarmont.medium.com/" style="margin-right:3px; cursor:pointer;"><span class="iconify" data-icon="bx:bxl-medium" data-inline="false"></span></a>
 
-                        <a href="https://github.com/olcarmontzaragoza" style="margin-right:3px; cursor:pointer;"><span class="iconify" data-icon="akar-icons:github-fill" data-inline="false"></span></a>
+                        <a href="https://github.com/olivercarmont" style="margin-right:3px; cursor:pointer;"><span class="iconify" data-icon="akar-icons:github-fill" data-inline="false"></span></a>
 
                         <a href="mailto:ocarmont@berkeley.edu" style="margin-right:3px; cursor:pointer;"><span class="iconify" data-icon="clarity:email-solid" data-inline="false"></span></a>
                     </div>
